--- a/wshubear/pom.xml
+++ b/wshubear/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>ch.cern.eam</groupId>
 			<artifactId>eam-wshub-core</artifactId>
-			<version>11.4-2-SNAPSHOT</version>
+			<version>${ch.cern.eam.eam-wshub-core.version}</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
