--- a/wshubrest/pom.xml
+++ b/wshubrest/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>ch.cern.eam</groupId>
             <artifactId>eam-wshub-core</artifactId>
-            <version>11.4-2-SNAPSHOT</version>
+            <version>${ch.cern.eam.eam-wshub-core.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
